fix: add margin-top to hero social container for improved spacing

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -262,6 +262,7 @@ display: none;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
   }
   .hello-btn{
     height: 45px;
